--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -3,5 +3,17 @@
     "counterAppBarTitle": "Contador",
     "@counterAppBarTitle": {
         "description": "Texto mostrado en la AppBar de la página del contador"
+    },
+    "preferencesAppBarTitle": "Preferencias",
+    "@preferencesAppBarTitle": {
+        "description": "Texto mostrado en la AppBar de la página de Preferencias"
+    },
+    "preferencesApiKeyLabel": "Clave API",
+    "@preferencesApiKeyLabel": {
+        "description": "Texto mostrado en la configuración de preferencias para la clave API"
+    },
+    "preferencesSpeechServicesRemoteLabel": "¿TSS / STT remoto?",
+    "@preferencesSpeechServicesRemoteLabel": {
+        "description": "Texto mostrado en la configuración de preferencias de '¿Son remotos los servicios de voz?'"
     }
 }
