Main page with assets and a grid layout

--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -4,6 +4,10 @@
     "@counterAppBarTitle": {
         "description": "Texto mostrado en la AppBar de la página del contador"
     },
+    "mainAppBarTitle": "Agente",
+    "@mainAppBarTitle": {
+        "description": "Texto mostrado en la AppBar de la página principal"
+    },
     "preferencesAppBarTitle": "Preferencias",
     "@preferencesAppBarTitle": {
         "description": "Texto mostrado en la AppBar de la página de Preferencias"
