--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -4,6 +4,10 @@
     "@counterAppBarTitle": {
         "description": "Text shown in the AppBar of the Counter Page"
     },
+    "mainAppBarTitle": "Agentic",
+    "@mainAppBarTitle": {
+        "description": "Text shown in the AppBar of the Main Page"
+    },
     "preferencesAppBarTitle": "Preferences",
     "@preferencesAppBarTitle": {
         "description": "Text shown in the AppBar of the Preferences Page"
