--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -32,6 +32,10 @@
     "@preferencesSpeechServicesRemoteLabel": {
         "description": "Text shown in the preferences settings for Are Speech Services Remote?"
     },
+    "preferencesVolumeLabel": "Volume",
+    "@preferencesVolumeLabel": {
+        "description": "Text shown in the preferences settings for Volume"
+    },
     "preferencesInputLocaleLabel": "Input Locale",
     "@preferencesInputLocaleLabel": {
         "description": "Text shown in the preferences settings for Input Locale"
