--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -52,8 +52,8 @@
     "@preferencesOutputLocaleSubLabel": {
         "description": "Texto que se muestra en el subtítulo de configuración de preferencias para la configuración regional de salida"
     },
-    "utteranceAppBarTitle": "Presione para detener la grabación:",
-    "@utteranceAppBarTitle": {
+    "interactionAppBarTitle": "Presione para detener la grabación:",
+    "@interactionAppBarTitle": {
         "description": "Texto que se muestra en la AppBar de la página de expresión"
     }
 }
