Adding fast LLM mode switch to differentiate flash and pro instead of the UX buttons (We are adding multi modal mode and more buttons)

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -12,6 +12,10 @@
     "@preferencesGeminiApiKeyLabel": {
         "description": "Text shown in the preferences settings for Gemini API Key"
     },
+    "preferencesFastLlmModeLabel": "Fast LLM Mode",
+    "@preferencesFastLlmModeLabel": {
+        "description": "Text shown in the preferences settings for Fast LLM Mode"
+    },
     "preferencesAlphaVantageAccessKeyLabel": "Alpha Vantage Access Key",
     "@preferencesAlphaVantageAccessKeyLabel": {
         "description": "Text shown in the preferences settings for Alpha Vantage Access Key"
