--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -67,5 +67,25 @@
     "interactionAppBarTitle": "Press to stop recording:",
     "@interactionAppBarTitle": {
         "description": "Text shown in the AppBar of the Interaction Page"
+    },
+    "uniModalButtonDescription": "Uni Modal interaction",
+    "@uniModalButtonDescription": {
+        "description": "Text shown on the legend dialog for Uni Modal Button"
+    },
+    "translateButtonDescription": "Translate interaction",
+    "@translateButtonDescription": {
+        "description": "Text shown on the legend dialog for Translate Button"
+    },
+    "multiModalButtonDescription": "Multi Modal interaction",
+    "@multiModalButtonDescription": {
+        "description": "Text shown on the legend dialog for Multi Modal Button"
+    },
+    "databaseButtonDescription": "Database of personalization and history",
+    "@databaseButtonDescription": {
+        "description": "Text shown on the legend dialog for Database Button"
+    },
+    "preferencesButtonDescription": "Preferences and Settings",
+    "@preferencesButtonDescription": {
+        "description": "Text shown on the legend dialog for Preferences Button"
     }
 }
