--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -87,5 +87,9 @@
     "preferencesButtonDescription": "Preferences and Settings",
     "@preferencesButtonDescription": {
         "description": "Text shown on the legend dialog for Preferences Button"
+    },
+    "preferencesLlmDebugModeLabel": "LLM Debug Mode",
+    "@preferencesLlmDebugModeLabel": {
+        "description": "Text shown in the preferences settings for LLM Debug Mode"
     }
 }
