--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -119,5 +119,9 @@
     "historyAppBarTitle": "Historia",
     "@historyAppBarTitle": {
         "description": "Texto que se muestra en la barra de aplicaciones de la página Historial"
+    },
+    "captureAppBarTitle": "Tap to capture",
+    "@captureAppBarTitle": {
+        "description": "Text shown in the AppBar of the Image Capture Page"
     }
 }
