Adding language selector for the application localization #19 Unfortunately it requires app restart because neither the preferences setting nor the LocaleCubit emit doesn't reach the main app level and doesn't cause a rebuild.

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -163,5 +163,9 @@
     "preferencesSystemLabel": "System",
     "@preferencesSystemLabel": {
         "description": "Text shown on the preferences settings button and page for System"
+    },
+    "localeSelectionLabel": "Language Selection:",
+    "@localeSelectionLabel": {
+        "description": "Text shown in the Preferences for application Language Selection lead label"
     }
 }
